Fix alignment of large button text when used with an anchor element.

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -153,6 +153,9 @@
 	@include oTypographySans($weight: 'semibold');
 	@include _oButtonsSizeContent($size);
 	display: inline-block;
+	// Use flexbox to align text vertically when used with an anchor element.
+	display: inline-flex;
+	align-items: center;
 	box-sizing: border-box;
 	vertical-align: middle;
 	margin: 0;
